--- a/_sass/_slides.sass
+++ b/_sass/_slides.sass
@@ -104,6 +104,10 @@
 .rw-sentence
   +phones
     font-size: 2rem
+    margin-right: 0.5rem
+    span
+      &:first-child
+        margin-right: 0.5rem
 
 .fp-viewing-about
   .rw-words
